hphp/hack/test/typecheck/reactive/test_obj_set3.php.like_types.exp
File "test_obj_set3.php", line 9, characters 3-13:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
