hphp/hack/test/typecheck/reactive/test_obj_set3.php
<?hh // strict

class Foo {
  public function __construct(public Vector<int> $value) {}
}

<<__Rx>>
function test(Foo $x): void {
  $x->value[] = 5;
}
